--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@openbci/cyton": "^2.0.1",
+    "dspjs": "^1.0.0",
     "express": "^4.17.1",
     "require": "^2.4.20",
     "socket.io": "^2.3.0"
